--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -41,7 +41,7 @@
 
 }
 
-.name {
+.our-team__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -51,7 +51,7 @@
     margin: 25px 0 0 0;
 }
 
-.job-title {
+.our-team__job-title {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
@@ -61,7 +61,7 @@
     margin: 10px 0 16px 0;
 }
 
-.social-svg {
+.our-team__svg {
     padding: 0;
     display: flex;
     justify-content: center;
