--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@ footer {
     padding: 60px 0;
 }
 
-.footer-container {
+.footer__container {
     display: flex;
     align-items: baseline;
 }
@@ -16,7 +16,7 @@ footer {
     color: #fff;
 }
 
-.footer-address {
+.footer-addres-box__addres {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -25,18 +25,19 @@ footer {
     color: #FFFFFF;
     margin: 20px 0 0 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 
-    & p {
+    & {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    & p:focus,
-    & p:hover {
+    &:focus,
+    &:hover {
         color: #2196F3;
     }
 }
 
-.footer-contacts {
+.footer-addres-box__contacts {
     padding: 0;
     margin: 0;
 
@@ -77,7 +78,7 @@ footer {
     }
 }
 
-.footer-social-svg {
+.footer-social-box__svg {
     margin: 0;
     padding: 0;
     display: flex;
@@ -137,7 +138,7 @@ footer {
     }
 }
 
-.subscribe-email {
+.subscribe-box__email {
     background: #2F303A;
     width: 358px;
     height: 50px;
@@ -159,7 +160,7 @@ footer {
     }
 }
 
-.subscribe-btn {
+.subscribe-box__btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -179,7 +180,7 @@ footer {
     }
 }
 
-.btn-send {
+.subscribe-box__btn-send {
     margin-left: 10px;
     fill: #FFFFFF;
 }
